Added many features
