# src/types/FileData.ts
@@ -1,0 +1,7 @@
+type Pdf = {
+    title: String;
+    text: string;
+    createdAt?: string;
+}
+
+export default Pdf;
